--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teste-brain-agriculture",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Teste - Brain Agriculture: O teste tem como objetivo acurar as habilidades do candidato em resolver alguns problemas relacionados à lógica de programação, regra de negócio e orientação à objetos.",
   "main": "src/init.js",
   "scripts": {
@@ -16,19 +16,30 @@
     "PostgreSQL",
     "pgsql",
     "sequelize",
-    "postgres"
+    "postgres",
+    "Migrations",
+    "Middleware",
+    "Auth",
+    "JWT",
+    "json web token"
   ],
   "author": "Alan Oliveira",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chai": "^4.2.0",
     "config": "^3.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.1",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1",
     "supertest": "^4.0.2",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1"
   }
 }
